--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,25 @@
-group 'qq.yopta'
-version '1.0-SNAPSHOT'
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:1.5.2.RELEASE"
+    }
+}
 
-apply plugin: 'java'
+apply plugin: 'java' // its Java project.
+apply plugin: 'war' // We want to build web application.
+apply plugin: 'idea' // sync with IDEA.
+apply plugin: 'org.springframework.boot' // configure defaults for web app.
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile("org.springframework.boot:spring-boot-starter-web") {
+        exclude module: "spring-boot-starter-tomcat" // We are not using tomcat, for now.
+    }
+    compile "org.springframework.boot:spring-boot-starter-jetty" // TODO use gretty instead.
+    compile "org.springframework.boot:spring-boot-starter-actuator"
 }
