--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,46 @@
-group 'qq.yopta'
-version '1.0-SNAPSHOT'
+buildscript {
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+    dependencies {
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:1.5.2.RELEASE",
+                'org.akhikhl.gretty:gretty:+'
+    }
+}
 
-apply plugin: 'java'
+apply plugin: 'java' // its Java project.
+apply plugin: 'war' // We want to build web application.
+apply plugin: 'idea' // sync with IDEA.
+apply plugin: 'org.springframework.boot' // configure defaults for web app.
+apply plugin: 'org.akhikhl.gretty' // nice container for local runs
 
 repositories {
     mavenCentral()
+    jcenter()
+}
+
+ext {
+    latestVersion = "+"
 }
 
 dependencies {
+    compile "org.springframework.boot:spring-boot-starter-web",
+            "org.springframework.boot:spring-boot-starter-jetty", // TODO use gretty instead.
+            "org.springframework.boot:spring-boot-starter-actuator",
+            "org.apache.logging.log4j:log4j-api:$latestVersion",
+            "org.apache.logging.log4j:log4j-core:$latestVersion",
+            "org.apache.commons:commons-io:$latestVersion",
+            "org.apache.commons:commons-lang3:$latestVersion",
+            "com.google.guava:guava:$latestVersion"
 
+    runtime "javax.servlet:jstl:$latestVersion",
+            "javax.servlet:servlet-api:$latestVersion",
+            "taglibs:standard:$latestVersion",
+            "javax.servlet.jsp:jsp-api:$latestVersion"
+}
+gretty {
+    httpPort = 8081
+    contextPath = '/'
+    servletContainer = 'tomcat8' // tomcat7 or tomcat8
 }
